MOD 홈페이지 경로 변경

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "blind-date-app",
   "private": true,
+  "homepage": "https://jjeongsu.github.io/blinddate-app/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
